--- a/front end/index.html
+++ b/front end/index.html
@@ -111,7 +111,7 @@
     <div class="featurette" id="about">
         <img class="featurette-image img-circle img-responsive pull-right" src="assets/img/cage.png">
         <h2 class="featurette-heading" style="padding-top:3%;">About Us</h2>
-        <p class="lead">We're a team of big dicked comp sci majors looking change the world with our superior intellect</p>
+        <p class="lead">We're a group of WashU CS majors, working to make the world a better place</p>
     </div>
 
     <hr class="featurette-divider">
